minidump-stackwalk/tests/snapshots/test_minidump_stackwalk__json-pretty-unloaded.snap
---
source: minidump-stackwalk/tests/test-minidump-stackwalk.rs
expression: json_out
---
{
  "crash_info": {
    "address": null,
    "adjusted_address": null,
    "assertion": null,
    "crash_inconsistencies": null,
    "crashing_thread": null,
    "instruction": null,
    "instruction_pointer_update": null,
    "memory_accesses": null,
    "possible_bit_flips": null,
    "type": null
  },
  "crashpad_info": null,
  "handles": null,
  "linux_memory_map_count": null,
  "lsb_release": null,
  "mac_boot_args": null,
  "mac_crash_info": null,
  "main_module": 0,
  "modules": [],
  "modules_contains_cert_info": false,
  "pid": null,
  "proc_limits": null,
  "process_uptime": null,
  "soft_errors": null,
  "status": "OK",
  "system_info": {
    "cpu_arch": "x86",
    "cpu_count": 1,
    "cpu_info": "\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000 family 6 model 0 stepping 0",
    "cpu_microcode_version": null,
    "os": "0x0x000000",
    "os_ver": "0.0.0"
  },
  "thread_count": 1,
  "threads": [
    {
      "frame_count": 1,
      "frames": [
        {
          "file": null,
          "frame": 0,
          "function": null,
          "function_offset": null,
          "inlines": null,
          "line": null,
          "missing_symbols": true,
          "module": null,
          "module_offset": null,
          "offset": "0x00f00800",
          "trust": "context",
          "unloaded_modules": [
            {
              "module": "many.dll",
              "offsets": [
                "0x00000460",
                "0x00000700",
                "0x00000800"
              ]
            },
            {
              "module": "solo.dll",
              "offsets": [
                "0x000005e0"
              ]
            }
          ]
        }
      ],
      "last_error_value": null,
      "thread_id": 4660,
      "thread_name": null
    }
  ],
  "unloaded_modules": [
    {
      "base_addr": "0x00a003a0",
      "cert_subject": null,
      "code_id": "b1054d2a1000",
      "end_addr": "0x00a013a0",
      "filename": "unused.dll"
    },
    {
      "base_addr": "0x00f00000",
      "cert_subject": null,
      "code_id": "b1054d2a1000",
      "end_addr": "0x00f01000",
      "filename": "many.dll"
    },
    {
      "base_addr": "0x0af00220",
      "cert_subject": null,
      "code_id": "b1054d2a2000",
      "end_addr": "0x0af02220",
      "filename": "solo.dll"
    },
    {
      "base_addr": "0x00f00100",
      "cert_subject": null,
      "code_id": "b1054d2a1000",
      "end_addr": "0x00f01100",
      "filename": "many.dll"
    },
    {
      "base_addr": "0x00f003a0",
      "cert_subject": null,
      "code_id": "b1054d2a1000",
      "end_addr": "0x00f013a0",
      "filename": "many.dll"
    },
    {
      "base_addr": "0x00f00220",
      "cert_subject": null,
      "code_id": "b1054d2a2000",
      "end_addr": "0x00f02220",
      "filename": "solo.dll"
    },
    {
      "base_addr": "0x0af00220",
      "cert_subject": null,
      "code_id": "b1054d2a2000",
      "end_addr": "0x0af02220",
      "filename": "solo.dll"
    },
    {
      "base_addr": "0x00f00000",
      "cert_subject": null,
      "code_id": "b1054d2a1000",
      "end_addr": "0x00f01000",
      "filename": "many.dll"
    }
  ]
}
